--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
                             <ul class="navbar__submenu level-2" aria-hidden="true" >
                                      <li>
                                        <a
-                                          href="https://annuaire.agistaterre.org/magasins-bio-etou-locaux/"
+                                          href="https://annuaire.agistaterre.org/magasins-bio-et-ou-locaux/"
                                              target="_self"
                         >
                                           🛒 Acheter bio et/ou local
@@ -108,7 +108,7 @@
                                  </li>
                                      <li>
                                        <a
-                                          href="https://annuaire.agistaterre.org/les-fermes-aux-alentours/"
+                                          href="https://annuaire.agistaterre.org/les-producteurs-aux-alentours/"
                                              target="_self"
                         >
                                           🌱 Les producteurs aux alentours
@@ -147,7 +147,7 @@
                                  </li>
                                      <li>
                                        <a
-                                          href="https://annuaire.agistaterre.org/recycler-2/"
+                                          href="https://annuaire.agistaterre.org/recycler-plus/"
                                              target="_self"
                         >
                                           ♻️ Recycler
@@ -222,7 +222,7 @@
 </main>
 <footer class="footer">
         <div class="footer__copyright">
-            <p>Powered by Publii</p>
+            <p>Créé par l'association <a href="https://www.agistaterre.org/" title="Agis Ta Terre">Agis Ta Terre</a> avec Publii</p>
         </div>
         <button onclick="backToTopFunction()" id="backToTop" class="footer__bttop" aria-label="Back to top" title="Back to top">
             <svg>
